2017-09-19  Nael Ouedraogo  <nael.ouedraogo@crf.canon.fr>

        [GTK] The binding code of Media Source Extension of AudioTrack, VideoTrack and TextTrack is not generated
        https://bugs.webkit.org/show_bug.cgi?id=174620

        Reviewed by Michael Catanzaro.

        Add AudioTrackMediaSource, VideoTrackMediaSource and TextTrackMediaSource IDL files in CMakeLists. Fix WPT test
        that checks MSE interfaces. This test failed since webm is not supported for MSE in GTK port. PR already merged
        in WPT repository.

        Remove skipped test that is now passing in TestExpectation. Modify expected file for GTK (same as mac).

        * platform/gtk/TestExpectations:
        * platform/gtk/imported/w3c/web-platform-tests/media-source/interfaces-expected.txt: Added.

2017-09-19  Dean Jackson  <dino@apple.com>

        [WebGL] VideoTextureCopierCV doesn't correctly restore vertex attribute state
        https://bugs.webkit.org/show_bug.cgi?id=176771
        <rdar://problem/34386621>

        Reviewed by Antoine Quint.

        Tweak this test to make sure it does something different from
        the code in WebCore to render a video into a texture, thus
        ensuring that we're testing state is correctly restored.

        * fast/canvas/webgl/texImage2D-video-flipY-true.html:

2017-09-19  Dean Jackson  <dino@apple.com>

        [WebGL] accelerated texImage2D for video doesn't respect flipY
        https://bugs.webkit.org/show_bug.cgi?id=176491
        <rdar://problem/33833511>

        Reviewed by Jer Noble.

        (Take 3 - this was rolled out due to a test failure)

        Test that exercises UNPACK_FLIP_Y_WEBGL for video on the accelerated
        path.

        * fast/canvas/webgl/resources/orientation-flipped.mp4: Added.
        * fast/canvas/webgl/resources/orientation-normal.mp4: Added.
        * fast/canvas/webgl/texImage2D-video-flipY-false-expected.txt: Added.
        * fast/canvas/webgl/texImage2D-video-flipY-false.html: Added.