@@ -798,7 +798,6 @@ media/session [ Skip ]
 
 webrtc/datachannel/multiple-connections.html [ Slow ]
 webrtc/video-replace-track.html [ Pass Failure ]
-webrtc/video-getParameters.html [ Failure ]
 webkit.org/b/170178 webrtc/video-replace-track-to-null.html [ Pass Failure ]
 webkit.org/b/175305 webrtc/video-rotation.html [ Failure Timeout ]
 webkit.org/b/170704 webrtc/video-mute.html [ Failure ]
