@@ -1,3 +1,13 @@
+2017-09-19  Youenn Fablet  <youenn@apple.com>
+
+        LayoutTest webrtc/video-getParameters.html is failing
+        https://bugs.webkit.org/show_bug.cgi?id=170148
+
+        Reviewed by Alex Christensen.
+
+        * TestExpectations: Marking test as passing.
+        * webrtc/video-getParameters.html: Further sanitizing parameters against changes.
+
 2017-09-19  Nael Ouedraogo  <nael.ouedraogo@crf.canon.fr>
 
         [GTK] The binding code of Media Source Extension of AudioTrack, VideoTrack and TextTrack is not generated
